# lazy_loader

./: .gitignore  Makefile.am  README  configure.ac
include/lazyloader/: lazy_loader.hpp
include/thunk/: .#lazy_loader.hpp  lazy_loader.hpp
src/: Makefile.am  example1.cpp  example2.cpp  main.cpp
