#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([lazy_loader], [0.1], [jb@thunkbrightly.com])
AC_CONFIG_SRCDIR([include/thunk/lazy_loader.hpp])
AM_INIT_AUTOMAKE(lazy_loader, 2.6)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
